Added an option to not let pawns to fall Used DeepL to update translations for ChineseSimplified, French, German

--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,9 @@
 # Changelog for IceIsSlippery
 
+1.5.2 - Added an option to not let pawns to fall
+Used DeepL to update translations for ChineseSimplified, French, German
+
+
 1.5.1 - Moved slippery terrain definitions to mod-extensions to allow for easier patching
 
 
